Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/6569404/T6569404b.out
T6569404b.java:13:48: compiler.err.type.var.cant.be.deref
1 error
